maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:39: error: type mismatch;
 found   : Unit
 required: Boolean
  for(i<- 0 to (getMondeLargeur()-1)){
       ^